# taichi

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  main.py  pyproject.toml  render_ink_video.py  render_video.py  requirements.txt  run.bat  run.sh  yan_gua.py  项目简介.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
archive/: README.md  main_legacy.py
bagua/: __init__.py  app.py  audio.py  config.py  debug.py  input_pose.py  move_announcer.py  particles.py  pose_matcher.py  reference_builder.py  renderer.py
reference_poses/: 01_qi_shi.json  02_zuo_you_ye_ma_fen_zong.json  03_bai_he_liang_chi.json  04_zuo_you_lou_xi_ao_bu.json  05_shou_hui_pi_pa.json  06_zuo_you_dao_juan_gong.json  07_zuo_lan_que_wei.json  08_you_lan_que_wei.json  09_dan_bian.json  10_yun_shou.json  11_dan_bian.json  12_gao_tan_ma.json  13_you_deng_jiao.json  14_shuang_feng_guan_er.json  15_zhuan_shen_zuo_deng_jiao.json  16_zuo_xia_shi_du_li.json  17_you_xia_shi_du_li.json  18_zuo_you_chuan_suo.json  19_hai_di_zhen.json  20_shan_tong_bei.json  21_zhuan_shen_ban_lan_chui.json  22_ru_feng_si_bi.json  23_shi_zi_shou.json  24_shou_shi.json
scripts/: README.md  render_demo.py  render_quad_demo.py  render_video.py
tests/: README.md  __init__.py  test_camera_renderer.py  test_config.py  test_demo.py  test_motion.py  test_offline_renderer.py  test_physics.py  test_physics_cuda.py  test_runtime.py  test_smoke.py  test_tracking.py  test_vortex.py
yan_gua/: README.md  __init__.py  __main__.py  camera_renderer.py  config.py  motion.py  offline_renderer.py  physics.py  runtime.py  sketch.py  tracking.py  vortex.py
