[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "yan-gua"
version = "4.0.0"
description = "双手驱动的实时星尘涡场交互系统"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ly99LLL" }]
keywords = ["taichi", "mediapipe", "generative-art", "computer-vision", "py5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "mediapipe>=0.10.9,<0.11",
    "numpy>=1.24,<3",
    "opencv-python>=4.8,<6",
    "py5>=0.10,<1",
    "taichi>=1.7,<2",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.6,<8",
    "pre-commit>=4,<5",
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.11,<1",
]

[project.urls]
Homepage = "https://github.com/ly99LLL/taichi"
Issues = "https://github.com/ly99LLL/taichi/issues"
Repository = "https://github.com/ly99LLL/taichi.git"

[tool.setuptools.packages.find]
include = ["yan_gua*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
    "cuda: requires an NVIDIA GPU and CUDA runtime",
    "physics: exercises the Taichi particle kernel",
]

[tool.coverage.run]
branch = true
source = ["yan_gua"]
omit = ["yan_gua/__main__.py", "yan_gua/sketch.py"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true
fail_under = 55

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["archive"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"yan_gua/__main__.py" = ["E402", "F401"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
exclude = ["archive"]
reportMissingTypeStubs = false
